fix: use setAllowedOrigins instead of setAllowedOriginPatterns (Spring 5.2 compat)
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>